[package]
name = "rust8720"
version = "0.1.0"
authors = ["phil"]
edition = "2018"

[dependencies]
futures-lite = { version = "1.11", default-features = false, features = ["alloc"] }
spin_on = "0.1"
num = { version = "0.3", default-features = false }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"

[lib]
crate-type = ["staticlib"]
