[package]
name = "minihttp"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"

[dependencies]
embedded-nal = "0.3"
httparse = { version = "1.3", default-features = false }
futures-lite = { version = "1.11", default-features = false, features = ["alloc"] }
bare-io = { version = "0.2", features = ["nightly"] } # his looks like it's being renamed to "core2"

[dev-dependencies]
std-embedded-nal = "0.0.3"
anyhow = "1.0"
lazy_static = "1.4"
spin_on = "0.1"
nb = "1.0"
no-std-net = "0.5"
heapless = "0.6"
